SERVER-77183 Only eliminate projection before group when group doesn't require full document

(cherry picked from commit 107f24c1bf0c8f7041978b2dfb718bb6694e0ba5)